--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                     <input class="input" type="text" placeholder="Search an Artist" id="search-field">
                                 </div>
                                 <div class="control">
-                                    <a class="button is-info" id="search-button">Search</a>
+                                    <button class="button is-info" id="search-button" type="submit">Search</button>
                                 </div>
                             </div>
                         </form>
