--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                     <input class="input" type="text" placeholder="Search an Artist" id="search-field">
                                 </div>
                                 <div class="control">
-                                    <a class="button is-info" id="search-button">Search</a>
+                                    <button class="button is-info" id="search-button">Search</button>
                                 </div>
                             </div>
                         </form>
@@ -55,8 +55,8 @@
                 </div>
                 <!--Display-->
                 <div class="column is-8">
-                  <div class="notification is-warning is-size-7" id="search-results-container" style="display: none;">
-                      <div class="columns is-multiline" id="search-results" style="background-color: azure;">
+                  <div class="notification is-warning is-size-7" id="search-results-container" >
+                      <div class="columns is-multiline" id="search-results" style="background-color: rgb(255, 255, 255);">
                       </div>
                   </div>
                   <div class="notification is-default" id="artist" style="display: none;">
