--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.css">
     <link rel="stylesheet" href="./style.css">
-    
+
     <title>Artistry</title>
 </head>
+
 <body>
 
     <!--Top "Hero" of the page-->
@@ -18,10 +20,11 @@
             <div class="container" id="heroContainer">
                 <div class="titleHero">
                     <h1 id="titleArtistry">Artistry</h1>
-                    <img id="artistry" src="./Artistry2020-Logo.png" alt="MIC"  style="max-width: 100px; max-height: 100px;">
-                  </div>
-                  <h4 id="subHead">An app for finding a new favourite artist</h4>
-                    
+                    <img id="artistry" src="./Artistry2020-Logo.png" alt="MIC"
+                        style="max-width: 100px; max-height: 100px;">
+                </div>
+                <h4 id="subHead">An app for finding a new favourite artist</h4>
+
             </div>
         </div>
     </section>
@@ -48,27 +51,21 @@
                     <!--Search history-->
                     <div class="notification has-background-grey-lighter" id="search-history">
                         <label class="label">Search History</label>
-                        <p id='search-history-help'>Once you search for your favourite artists, your queries will be saved here for easy access.</p>
+                        <p id='search-history-help'>Once you search for your favourite artists, your queries will be
+                            saved here for easy access.</p>
                         <ul id="search-history-list">
                         </ul>
                     </div>
                 </div>
                 <!--Display-->
                 <div class="column is-8">
-                  <div class="notification is-warning is-size-7" id="search-results-container" >
-                      <div class="columns is-multiline" id="search-results" style="background-color: rgb(255, 255, 255);">
-                      </div>
-                  </div>
-                  <div class="notification is-default" id="artist" style="display: none;">
-                      <div class="columns">
-                          <div class="column is-3">
-                              <img id="artist_img"/>
-                          </div>
-]              </div>
+                    <div id="search-results">
+                    </div>
+                </div>
             </div>
-        </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./main.js"></script>
 </body>
+
 </html>
