--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <!--Search history-->
                     <div class="notification has-background-grey-lighter" id="search-history">
                         <label class="label">Search History</label>
-                        <p id='search-history-help'>Once you search for your favourite artists, your queries will be
-                            saved here for easy access.</p>
+                        <button class="btn btn-primary mb-3" type="button" id="clear-history">Clear history</button>
+                        <form id="history"></form>
                         <ul id="search-history-list">
                         </ul>
                     </div>
@@ -66,6 +66,7 @@
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./main.js"></script>
+    <script src="./searchhistory.js"></script>
 </body>
 
 </html>
