--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                         <ul id="search-history-list">
                         </ul>
                     </div>
+                    <div class="column is-12  has-background-grey-lighter">
+                        <div id ="concert-results">Concert Results</div>
+                    </div>
+    
                 </div>
                 <!--Display-->
                 <div class="column is-8">
