--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                         </ul>
                     </div>
                     <div class="column is-12  has-background-grey-lighter">
-                        <div id ="concert-results">Concert Results</div>
+                        <div>Concert Results</div>
+                        <form id ="concert-results"></form>
                     </div>
     
                 </div>
