updated modal content

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="modal-content">
             <div class="box">
-                <p>Modal JS example</p>
+                <p>A digital service that lets you search artists, top songs and upcoming events</p>
                 <!-- Your content -->
             </div>
         </div>
