Updated html and CSS

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -45,8 +45,7 @@
                             <label class="label">Search Artist</label>
                             <div class="field has-addons">
                                 <div class="control">
-                                    <input class="input
-                                    " type="text" placeholder="Search an Artist" id="search-field">
+                                    <input class="input" type="text" placeholder="Search an Artist" id="search-field">
                                 </div>
                                 <div class="control">
                                     <button class="button is-info" id="search-button">Search</button>
