--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.css">
     <link rel="stylesheet" href="./assets/style.css">
 
@@ -20,10 +19,16 @@
             <div class="container" id="heroContainer">
                 <div class="titleHero">
                     <h1 id="titleArtistry">Artistry</h1>
-                    <img id="artistry" src="./Artistry2020-Logo.png" alt="MIC"
+                    <img id="artistry" src="./assets/Artistry2020-Logo.png" alt="MIC"
                         style="max-width: 100px; max-height: 100px;">
+
+                    <!-- Trigger/Open The Modal -->
+                    <button id="myBtn" class="js-modal-trigger" data-target="modal-js-example">About Artistry</button>
+
+
                 </div>
-                <h4 id="subHead">An app for finding a new favourite artist</h4>
+            </div>
+            <h4 id="subHead">An app for finding a new favourite artist</h4>
 
         </div>
         </div>
@@ -33,7 +38,7 @@
     <section class="section">
         <div class="container">
             <div class="columns">
-                <div class="column is-4 is-desktop">
+                <div class="column is-4">
                     <!--Search box-->
                     <div class="notification is-primary is-size-3">
                         <form id="search-form">
@@ -43,22 +48,22 @@
                                     <input class="input" type="text" placeholder="Search an Artist" id="search-field">
                                 </div>
                                 <div class="control">
-                                    <button class="button is-info is-rounded" id="search-button">Search</button>
+                                    <button class="button is-info" id="search-button">Search</button>
                                 </div>
                             </div>
                         </form>
                     </div>
                     <!--Search history-->
-                    <div class="notification has-background-grey-lighter is-desktop" id="search-history">
+                    <div class="notification has-background-grey-lighter" id="search-history">
                         <label class="label">Search History</label>
-                        <button class="btn btn-primary mb-3 is-rounded" type="button" id="clear-history">Clear history</button>
+                        <button class="btn btn-primary mb-3" type="button" id="clear-history">Clear history</button>
                         <form id="history"></form>
                         <ul id="search-history-list">
                         </ul>
                     </div>
                     <div class="column is-12  has-background-grey-lighter">
                         <div>Concert Results</div>
-                        <form id ="concert-results"></form>
+                        <form id="concert-results"></form>
                     </div>
 
                 </div>
@@ -74,6 +79,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./assets/main.js"></script>
     <script src="./assets/searchhistory.js"></script>
+
+    <div id="modal-js-example" class="modal">
+        <div class="modal-background"></div>
+
+        <div class="modal-content">
+            <div class="box">
+                <p>A digital service that lets you search artists, top songs and upcoming events</p>
+                <!-- Your content -->
+            </div>
+        </div>
+
+        <button class="modal-close is-large" aria-label="close"></button>
+
+    </div>
 </body>
 
 </html>
